# exercise-unit-testing

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  rectangle.cpp  rectangle.h
tests/: rectangle-tests.cpp
